--- a/upravljanjevremenomfront/src/components/Card.css
+++ b/upravljanjevremenomfront/src/components/Card.css
@@ -1,6 +1,6 @@
 .card {
   padding: 15px;
-  background-color: white;
+  background-color: #fef3c7;
   border: 1px solid #e5e7eb;
   border-radius: 5px;
 }
