--- a/upravljanjevremenomfront/src/pages/Beleske.css
+++ b/upravljanjevremenomfront/src/pages/Beleske.css
@@ -1,7 +1,7 @@
 .beleske-container {
   min-height: 100vh;
   padding: 40px;
-  background-color: #f9fafb;
+  background-color: #f4ecf4;
 }
 
 .beleske-input {
