--- a/upravljanjevremenomfront/src/pages/Statistika.css
+++ b/upravljanjevremenomfront/src/pages/Statistika.css
@@ -1,7 +1,7 @@
 .statistika-container {
   min-height: 100vh;
   padding: 40px;
-  background-color: #fefce8;
+  background-color: #f4ecf4;
 }
 
 .statistika-cards {
