--- a/upravljanjevremenomfront/src/pages/Zadatak.css
+++ b/upravljanjevremenomfront/src/pages/Zadatak.css
@@ -1,7 +1,7 @@
 .zadatak-container {
   min-height: 100vh;
   padding: 40px;
-  background-color: #fef3c7;
+  background-color: #f4ecf4;
 }
 
 .zadatak-input {
@@ -42,7 +42,7 @@
 
 .zadatak-card {
   padding: 15px;
-  background-color: white;
+  background-color: #fef3c7;
   border: 1px solid #e5e7eb;
   border-radius: 5px;
 }
