--- a/upravljanjevremenomfront/src/components/Navbar.css
+++ b/upravljanjevremenomfront/src/components/Navbar.css
@@ -7,10 +7,17 @@
   color: white;
 }
 
+.navbar-left{
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+
 .navbar-logo {
-  cursor: pointer;
-  font-size: 20px;
-  font-weight: bold;
+  width: 60px;       /* širina loga */
+  height: 60px;      /* visina loga */
+  margin-right: 10px; /* razmak između loga i naslova */
+  vertical-align: middle; 
 }
 
 .navbar-right button {
