--- a/upravljanjevremenomfront/src/pages/Pocetna.css
+++ b/upravljanjevremenomfront/src/pages/Pocetna.css
@@ -3,7 +3,7 @@
   margin: 60px auto;
   padding: 30px;
   text-align: center;
-  background-color: #f9f9f9;
+  background-color: #f4ecf4;
   border-radius: 10px;
 }
 
