--- a/upravljanjevremenomfront/src/pages/Beleske.css
+++ b/upravljanjevremenomfront/src/pages/Beleske.css
@@ -29,8 +29,9 @@
 }
 
 .beleske-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  display: flex;
+  flex-direction: column;
+  /**grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));**/
   gap: 15px;
 }
 
@@ -39,4 +40,10 @@
   background-color: white;
   border: 1px solid #e5e7eb;
   border-radius: 5px;
+}
+
+.beleska-actions {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
 }
